--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @import url(./css/scrollbar.css);
-
+@import url(./css/tailwind.css);
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
+
 
 body{
   font-family: 'Open Sans', sans-serif;
