--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url(./css/vue-transitions.css);
 @import url(./css/scrollbar.css);
 @import url(./css/tailwind.css);
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
