add board store

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -3,5 +3,8 @@
 @tailwind utilities;
 
 .flex-center {
-  @apply flex justify-center items-center
+  @apply flex justify-center items-center;
+}
+.transition-300 {
+  @apply transition-all duration-300;
 }
