--- a/src/css/custom-classes.css
+++ b/src/css/custom-classes.css
@@ -1,7 +1,7 @@
 .parent-hover .child-visible {
   visibility: hidden;
   opacity: 0;
-  transition: all 500ms ease-in;
+  transition: opacity 500ms ease-in;
 }
 .parent-hover:hover .child-visible {
   visibility: visible;
